fix align in index file

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,12 +1,13 @@
 body {
-    background-color: #3a799e;
+    background-color: #aac1ce;
 }
 
-.brand {
-    font-family: Lato, sans-serif;
-    font-size: 1.4rem;
+.navbar-brand {
+    font-family: 'Playfair Display', serif;
+    font-size: 2rem;
     font-weight: 700;
-    color: #56a81fb4;
+    font-style: italic;
+    color: #4A4A4F;
 }
 
 .red-o {
